introduction done except timeseer

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1335,6 +1335,54 @@ Granularities},
   publisher={Wadsworth Publishing Company}
 }
 
+@Article{inference,
+  author = {Andreas Buja and Dianne Cook and Heike Hofmann and Michael Lawrence and Eun-Kyung Lee and Deborah F. Swayne and Hadley Wickham},
+  doi = {10.1098/rsta.2009.0120},
+  journal = {Royal Society Philosophical Transactions A},
+  number = {1906},
+  pages = {4361–4383},
+  title = {Statistical Inference for Exploratory Data Analysis and Model Diagnostics},
+  volume = {367},
+  year = {2009},
+  bdsk-url-1 = {http://dx.doi.org/10.1098/rsta.2009.0120},
+}
+
+ @ARTICLE{Majumder2013-hb,
+   title     = "Validation of Visual Statistical Inference, Applied to Linear
+                Models",
+   author    = "Majumder, Mahbubul and Hofmann, Heike and Cook, Dianne",
+   abstract  = "Statistical graphics play a crucial role in exploratory data
+                analysis, model checking, and diagnosis. The lineup protocol
+                enables statistical significance testing of visual findings,
+                bridging the gulf between exploratory and inferential
+                statistics. In this article, inferential methods for statistical
+                graphics are developed further by refining the terminology of
+                visual inference and framing the lineup protocol in a context
+                that allows direct comparison with conventional tests in
+                scenarios when a conventional test exists. This framework is
+                used to compare the performance of the lineup protocol against
+                conventional statistical testing in the scenario of fitting
+                linear models. A human subjects experiment is conducted using
+                simulated data to provide controlled conditions. Results suggest
+                that the lineup protocol performs comparably with the
+                conventional tests, and expectedly outperforms them when data
+                are contaminated, a scenario where assumptions required for
+                performing a conventional test are violated. Surprisingly,
+                visual tests have higher power than the conventional tests when
+                the effect size is large. And, interestingly, there may be some
+                super-visual individuals who yield better performance and power
+                than the conventional test even in the most difficult tasks.
+                Supplementary materials for this article are available online.",
+   journal   = "J. Am. Stat. Assoc.",
+   publisher = "Taylor \& Francis",
+   volume    =  108,
+   number    =  503,
+   pages     = "942--956",
+   month     =  sep,
+   year      =  2013
+ }
+ 
+
 #### 
 
 
